--- a/planningandacquiring/templates/planningandacquiring/budget_list.html
+++ b/planningandacquiring/templates/planningandacquiring/budget_list.html
@@ -18,7 +18,7 @@
         <thead>
             <tr>
                 <th>Date Created</th>
-                <th>Year to Budget</th>
+                <th>Year Budgeted</th>
                 <th>Budget</th>
                 <th></th>
             </tr>
