--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
@@ -1,7 +1,7 @@
 {% extends "profiles/sidebar_pa.html" %} {% block content %}
 <h2 class="ui header">
- {{Title}}
-  <div class="sub header">Input K9 breeding data here</div>
+ Confirm K9 Parent
+  
 </h2>
 
 <div class="ui ordered steps">
