--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -56,7 +56,7 @@
                         <a href="{% url 'planningandacquiring:budget_list'%}" class="item">
                                 <i class="money bill alternate outline icon"></i>Budgeting List
                         </a>
-                                <a href="{% url 'planningandacquiring:vet_date'%}" class="item">
+                        <!-- <a href="{% url 'planningandacquiring:vet_date'%}" class="item">
                                 <i class="money bill alternate outline icon"></i>Veterinarian Report
                         </a>
                                 <a href="{% url 'planningandacquiring:accomplishment_date'%}" class="item">
@@ -70,7 +70,7 @@
                         </a>
                                 <a href="{% url 'planningandacquiring:k9_report'%}" class="item">
                                 <i class="money bill alternate outline icon"></i>K9 Generalized Report
-                        </a>
+                        </a> -->
 
                         {% endif %}
 
