--- a/unitmanagement/templates/unitmanagement/k9_sick_details.html
+++ b/unitmanagement/templates/unitmanagement/k9_sick_details.html
@@ -305,7 +305,11 @@
 <div id ="id_health_data" class="ui longer modal"></div>
 
 <div class="ui modal" id = 'id_image_data'></div>
-
+<style>
+    ul {
+        list-style-type: none;
+    }
+</style>
 <script type="text/javascript">
 
     $(document).ready(function() {
