--- a/unitmanagement/templates/unitmanagement/yearly_vaccination.html
+++ b/unitmanagement/templates/unitmanagement/yearly_vaccination.html
@@ -21,20 +21,28 @@
     <table id="tabledata1" class="ui three column celled table">
         <thead class="ui center aligned">
             <tr>
-                <th>Name</th>
-                <th>Vaccination</th>
-                <th>Age</th>
+                <th>K9</th>
+                <th>Date Due</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for data in k9_dw %}
-            <tr>
-                <td>{{data.0.name}}</td>
-                <td class="center aligned">{{data.1.disease}}</td>
-                <td class="center aligned">{{data.0.age}}</td>
+            {% if data.1 == today%}
+            <tr class="positive">
+                <td>{{data.0}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
                 <td class="three wide column center aligned"><a href="#"
                 class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
             </tr>
+            {% elif today > data.1%}
+            <tr class="negative">
+                <td>{{data.0}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
+                <td class="three wide column center aligned"><a href="#"
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
+            </tr>
+            {%endif%}
             {% endfor %}
         </tbody>
     </table>
@@ -50,12 +58,21 @@
         </thead>
         <tbody>
             {% for data in k9_dh %}
-            <tr>
+            {% if data.1 == today%}
+            <tr class="positive">
                 <td>{{data.0}}</td>
-                <td class="center aligned">{{data.1}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
                 <td class="three wide column center aligned"><a href="#"
-                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='DHPP'>Select</a></td>
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
             </tr>
+            {% elif today > data.1%}
+            <tr class="negative">
+                <td>{{data.0}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
+                <td class="three wide column center aligned"><a href="#"
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
+            </tr>
+            {%endif%}
             {% endfor %}
         </tbody>
     </table>
@@ -71,12 +88,21 @@
         </thead>
         <tbody>
             {% for data in k9_ar %}
-            <tr>
+            {% if data.1 == today%}
+            <tr class="positive">
                 <td>{{data.0}}</td>
-                <td class="center aligned">{{data.1}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
                 <td class="three wide column center aligned"><a href="#"
-                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Anti-Rabies'>Select</a></td>
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
             </tr>
+            {% elif today > data.1%}
+            <tr class="negative">
+                <td>{{data.0}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
+                <td class="three wide column center aligned"><a href="#"
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
+            </tr>
+            {%endif%}
             {% endfor %}
         </tbody>
     </table>
@@ -92,12 +118,21 @@
         </thead>
         <tbody>
             {% for data in k9_br %}
-            <tr>
+            {% if data.1 == today%}
+            <tr class="positive">
                 <td>{{data.0}}</td>
-                <td class="center aligned">{{data.1}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
                 <td class="three wide column center aligned"><a href="#"
-                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Bordertella'>Select</a></td>
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
             </tr>
+            {% elif today > data.1%}
+            <tr class="negative">
+                <td>{{data.0}}</td>
+                <td class="center aligned">{{data.1|date:'Y-m-d'}}</td>
+                <td class="three wide column center aligned"><a href="#"
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-type='Deworming'>Select</a></td>
+            </tr>
+            {%endif%}
             {% endfor %}
         </tbody>
     </table>
@@ -125,10 +160,18 @@ $(document).ready(function() {
         $('#id_modal_data').modal('show');
     });
 
-    $('#tabledata1').DataTable();
-    $('#tabledata2').DataTable();
-    $('#tabledata3').DataTable();
-    $('#tabledata4').DataTable();
+    $('#tabledata1').DataTable({
+        "order": [[ 1, "asc" ]]
+    });
+    $('#tabledata2').DataTable({
+        "order": [[ 1, "asc" ]]
+    });
+    $('#tabledata3').DataTable({
+        "order": [[ 1, "asc" ]]
+    });
+    $('#tabledata4').DataTable({
+        "order": [[ 1, "asc" ]]
+    });
     $('.menu .item').tab();
 
 });
