--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -164,7 +164,7 @@
                          </thead>
                  
                          <tbody>
-                             {% for m, s, b in hlist %}
+                             <!-- {% for m, s, b in hlist %}
                              <tr class="positive">
                                  <td class="center aligned"> 
                                      <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
@@ -180,13 +180,36 @@
                                  <td>{{m.litter_no}}</td>
                                  <td>{{s}}</td>
                                  <td>
-                                    <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>Mate Today!</a> 
+                                    <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>
+                                        {{m.last_proestrus_date|date:'Y/m/d'}} -
+                                        Mate Today!</a> 
                                 </td>
                              </tr>
-                             {% endfor %}
+                             {% endfor %} -->
                              {% for m, s, b in mlist %}
-                             {% if m.last_estrus_date > today.date %}
+                             {% if today.date == m.last_estrus_date  %}
                              <tr class="positive">
+                                    <td class="center aligned"> 
+                                        <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
+                                    </td>
+                                    <td>
+                                        <a href="#" class="show_modal" id='{{m.id}}'
+                                        style="color:green;">{{m.name}}</a>
+                                    </td>
+                                    <td>{{m.age}}</td>
+                                    <td>{{m.breed}}</td>
+                                    <td>{{m.capability}}</td>
+                                    <td>{{b}}%</td>
+                                    <td>{{m.litter_no}}</td>
+                                    <td>{{s}}</td>
+                                    <td>
+                                       <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>
+                                           {{m.last_estrus_date|date:'Y/m/d'}} -
+                                           Mate Today!</a> 
+                                   </td>
+                                </tr>
+                             {% elif today.date > m.last_estrus_date  %}
+                             <tr class="negative">
                                  <td class="center aligned"> 
                                      <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
                                  </td>
@@ -201,7 +224,7 @@
                                  <td>{{m.litter_no}}</td>
                                  <td>{{s}}</td>
                                  <td>
-                                    <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>{{m.last_proestrus_date|date:'Y/m/d'}}</a> 
+                                    <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>{{m.last_estrus_date|date:'Y/m/d'}}</a> 
                                 </td>
                              </tr>
                              {% else %}
@@ -220,7 +243,7 @@
                                  <td>{{m.litter_no}}</td>
                                  <td>{{s}}</td>
                                  <td>
-                                    <a href="#" id='{{m.id}}' data-name='{{m}}' class="btn_modal" style="color:powderblue;">{{m.last_proestrus_date|date:'Y/m/d'}}</a> 
+                                    <a href="#" id='{{m.id}}' data-name='{{m}}' class="btn_modal" style="color:powderblue;">{{m.last_estrus_date|date:'Y/m/d'}}</a> 
                                   </td>
                              </tr>
                              {% endif %}
@@ -357,7 +380,7 @@
     $(".btn_modal").bind('click',function(){
         var id = $(this).attr('id');
         var name = $(this).data('name');
-        $('.header').text(name)
+     
         $('#id_k9').val(id)
         $('.ui.small.modal').modal('show');
     });
@@ -396,8 +419,7 @@
             var type = $(this).data('type');
          
             $('#id_health_data').modal('show');
-            $('.header').text(id);
-            
+         
             var url = 'ajax_load_health';  
             $('#id_health_data').modal('show');
 
