--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -12,25 +12,25 @@
                     <div class="ui equal width grid">
                         <div class="column">
                             <div class="ui raised center aligned segment">
-                                <div class="ui two column grid">
-                                    <div class="three wide column">
-                                            <div class="card">
-                                                    <div class="content">
-                                                        <i class="huge syringe blue icon">{{vac_count}}</i>
-                                                    </div>
-                                                    <div class="extra content">
-                                                        <strong>
-                                        <a href="{% url 'unitmanagement:vaccination_list'%}">PREVENTIVE
-                                                            HEALTH PROGRAM VACCINATION </a>
-                                                        </strong>
-                                                    </div>
-                                                </div> 
+                                <div class="ui grid">
+                                    <div class="sixteen wide column">
+                                        <div class="ui horizontal statistic">
+                                            <div class="value" style="color:#0E6EB8">
+                                                <i class="syringe blue icon"></i>
+                                                {{vac_count}}
+                                            </div>
+                                                
+                                            <div class="label">
+                                        <a href="{% url 'unitmanagement:vaccination_list'%">PREVENTIVE
+                                        HEALTH PROGRAM VACCINATION </a>
+                                            </div>
+                                        </div>               
                                     </div>
-                                    <div class="thirteen wide column left aligned">
+                                    <div class="sixteen wide column left aligned">
                                             <div class="ui grid">
                                     
                                                     {% for a,b in vac_list%}
-                                                    <div class="five wide column" style="margin: 2px;padding:2px;">
+                                                    <div class="five wide column" style="margin: 1px;padding:1px;font-size:11px;">
                                                            
                                                         <strong>{{a}} - </strong>
                                                         <span style="color:orangered;">{{b}}</span>
@@ -112,8 +112,8 @@
                                         <div class="extra content">
                                             <strong>
                                                 <a href="{% url
-                                                'unitmanagement:k9_sick_list'%}">PHEX
-                                                TO BE SCHEDULED</a>
+                                                'unitmanagement:k9_sick_list'%}"
+                                                style="font-size: 11px;">PHEX TO BE SCHEDULED</a>
                                             </strong>
                                         </div>
                                     </div>
