--- a/unitmanagement/templates/unitmanagement/replenishment_request_confirm.html
+++ b/unitmanagement/templates/unitmanagement/replenishment_request_confirm.html
@@ -42,13 +42,13 @@
         </table>
     </div>
     <div class="ui tab segment" data-tab="second">
-        <table id="tabledata1" class="ui column celled table">
+        <table id="tabledata2" class="ui column celled table">
             <thead>
                 <tr>
-                    <th class="two wide">Date Approved</th>
-                    <th class="three wide">Team Leader</th>
+                    <th class="ui three wide">Date Approved</th>
+                    <th class="ui three wide">Team Leader</th>
                     <th>Port</th>
-                    <th class="three wide">Approved by</th>
+                    <th class="ui three wide">Approved by</th>
                 </tr>
             </thead>
             <tbody>
