--- a/planningandacquiring/templates/planningandacquiring/budgeting_detail.html
+++ b/planningandacquiring/templates/planningandacquiring/budgeting_detail.html
@@ -15,6 +15,8 @@
                 <br>Coast Guard Base Taguig
                 <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
                     <br><b>Budget for the Year {{pb.year_budgeted|date:"Y"}}</b>
+                    <br>
+                    <br>
         </center>
         <table class="ui three column celled table" style="width:50%;">
             <thead>
@@ -357,7 +359,7 @@
                 <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
             <br>Coast Guard Base Taguig
             <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
-                <br><b>Budget for the Year {{pb.year_budgeted|date:"Y"}}</b>
+                <br><b>Proposed Budget for the Year {{pb.year_budgeted|date:"Y"}}</b>
     </center>
     {% if pb %}
     <table class="ui five column celled table">
@@ -712,7 +714,7 @@
             <br><b>HEADQUARTERS COAST GUARD K9 FORCE</b>
         <br>Coast Guard Base Taguig
         <br>#56 ML Quezon St. New Lower Bicutan, Taguig City
-            <br><b>Budget for the Year {{pb.year_budgeted|date:"Y"}}</b>
+            <br><b>Proposed Budget for the Year {{pb.year_budgeted|date:"Y"}}</b>
 </center>
 {% if pb %}
 <table class="ui five column celled table">
